--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <td><button id="btn" onclick="clean()">C</button></td>
           <td><button id="btn" onclick="voltar()">></button></td>
           <td><button id="btn" onclick="insert('/')">/</button></td>
-          <td><button id="btn" onclick="insert('*')">x</button></td>
+          <td><button id="btn" onclick="insert('*')">×</button></td>
         </tr>
         <tr>
           <td><button id="btn" onclick="insert('7')">7</button></td>
@@ -47,7 +47,7 @@
       </table>
         </div>
     </div>
-    <footer align="end";>&copy;Dan Silva!
+    <footer align="center";>&copy;Dan Silva!
     </footer>
     <script src="script.js"></script>
   <script src="./script.js"></script>
